--- a/homepage.html
+++ b/homepage.html
@@ -29,8 +29,8 @@
 <body>
       <div id="header">Money stat</div>
       <div style=" margin-top:130% ">
-            <a href="https://haushaltsbuch.auth.eu-central-1.amazoncognito.com/oauth2/authorize?response_type=token&client_id=36ukforb8bgvv50gq35kmev9qb&redirect_uri=https://main.d20ldbddf5hcx2.amplifyapp.com/view/dashboard.html" >register</a>  
-            <a href="https://haushaltsbuch.auth.eu-central-1.amazoncognito.com/logout?client_id=36ukforb8bgvv50gq35kmev9qb&logout_uri=https://main.d20ldbddf5hcx2.amplifyapp.com/homepage.html">log out</a>
+            <a href="https://haushaltsbuch.auth.eu-central-1.amazoncognito.com/oauth2/authorize?response_type=token&client_id=704inp8b1vhes29v3ajbaaaj8r&redirect_uri=https://main.d20ldbddf5hcx2.amplifyapp.com/view/wizard.html" >register</a>  
+            <a href="https://haushaltsbuch.auth.eu-central-1.amazoncognito.com/logout?client_id=704inp8b1vhes29v3ajbaaaj8r&logout_uri=https://main.d20ldbddf5hcx2.amplifyapp.com/homepage.html">log out</a>
       </div>
       
 <script>
